--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -187,6 +187,8 @@ dependencies {
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
+    implementation "androidx.constraintlayout:constraintlayout:2.0.4"
+
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
       exclude group:'com.facebook.fbjni'
     }
