--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   },
   "dependencies": {
     "@alan-ai/alan-sdk-react-native": "^1.0.7",
+    "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/voice": "^1.1.9",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-gesture-handler": "^1.9.0",
     "react-native-linear-gradient": "^2.5.6",
-    "react-native-responsive-screen": "^1.4.2"
+    "react-native-reanimated": "^1.13.2",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "^2.15.2",
+    "react-native-svg": "^12.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
