add masked view

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
       "strict": true,
       "target": "esnext",
       "resolveJsonModule": true,
+      "strictNullChecks": false
       
     },
     "exclude": [
